@@ -8,6 +8,8 @@ version 0.48
 	  the calendar view (needs a restart to take effect)
 	* GroupDAV store creation : correctly close the dialog on exit
 	* Preferences : load store data after creation
+	* UI Preferences panel : add a toggle to increase the size of saturday
+	  and sunday in the weekview
 
 version 0.47 (2025/02/05)
 	* Disable alarm sound backend and log a error if the sound
